some more alignment issues with the jobs list

--- a/assets/styles/main/list.sass
+++ b/assets/styles/main/list.sass
@@ -1,5 +1,10 @@
 @import "_mixins/all"
 
+table.list#jobs
+  margin-top: 25px
+  caption
+    margin-left: 6px
+
 table.list
   width: 100%
   padding: 0 6px 0 6px
