--- a/assets/styles/main/summary.sass
+++ b/assets/styles/main/summary.sass
@@ -1,7 +1,7 @@
 @import "_mixins/all"
 
 #summary
-  margin: 0 0 0 12px
+  margin: 0 0 0 6px
   @include clearfix
 
   .left,
